# pfdtomd

./: .gitignore  README.md  pyproject.toml
pdftomd/: __init__.py  __main__.py  converter.py  models.py  processor.py
pdftomd/processors/: cleaning.py  semantics.py  structure.py  tables.py
pdftomd/utils/: string_helpers.py
